# billion-row-table

./: .gitignore  AGENTS.md
backend/: Cargo.toml  package.json  tsconfig.json
backend-rust/src/: main.rs
backend/src/: build-index.ts  index.ts  indexer.ts  main.rs  slicer.ts  types.ts
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: draw.ts  grid.ts
